<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GalleryFragment">

    <TextView
        android:id="@+id/textGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/gallery"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/photoShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_photo"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:enabled="false"
        android:layout_margin="15dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/videoShow"
        app:layout_constraintTop_toBottomOf="@+id/textGallery"/>

    <Button
        android:id="@+id/videoShow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/show_video"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_margin="15dp"
        app:cornerRadius="0dp"
        app:layout_constraintStart_toEndOf="@+id/photoShow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGallery"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingBottom="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoShow" />

</androidx.constraintlayout.widget.ConstraintLayout>